@@ -47,6 +47,31 @@ import java.util.logging.Logger;
  * real hardware. See {@code juno-documentation}'s performance notes.
  *
  * <p>
+ * Dequantization is now partially in scope, as a follow-up to the
+ * accumulate-only version of this class: {@link #dequantizeQ8_0} vectorizes
+ * the Q8_0 int8-to-float widen-and-scale step, the simplest of the three
+ * quant formats (a flat scale plus 32 raw signed bytes, no nibble or
+ * high-bit-plane unpacking). Q4_K/Q5_K dequantization remains scalar; their
+ * irregular bit-shift/mask patterns are a different, harder problem and are
+ * left for a later pass once this one is validated on real hardware.
+ *
+ * <p>
+ * Because the byte-to-int-to-float shape conversion this uses is a less
+ * common corner of the Vector API than the plain same-shape arithmetic in
+ * {@link #dot}, and because this code cannot be exercised on real hardware
+ * before review, {@link #dequantizeQ8_0} is gated by its own dedicated probe
+ * ({@code Simd.probeDequantQ8_0()}) that dequantizes a known 32-byte pattern
+ * covering the full signed-byte range and checks every output lane against
+ * the scalar-computed expected value. The SIMD dequant path is only enabled
+ * if that self-check passes, so every call transparently reports "not
+ * available" otherwise and the caller falls back to its existing scalar
+ * dequant loop. This is a stronger runtime guarantee than {@link #AVAILABLE}
+ * alone, because that flag only proves the module loaded, not that this
+ * specific conversion is correct on this JVM/hardware combination, and it
+ * exists specifically because this path could not be unit-tested against
+ * real hardware ahead of time.
+ *
+ * <p>
  * Runtime availability: {@code jdk.incubator.vector} is still an incubating
  * JDK module as of JDK 25/26 (JEP 508 / JEP 529), because it requires
  * {@code --add-modules jdk.incubator.vector} at both compile and run time,
@@ -58,7 +83,7 @@ import java.util.logging.Logger;
  * {@link Simd}: caught once, here, at class-init time, rather than
  * failing verification of this outer class or any of its callers.
  */
-final class VectorQuantKernels {
+public final class VectorQuantKernels {
 
 	private static final Logger log = Logger.getLogger(VectorQuantKernels.class.getName());
 
@@ -69,6 +94,15 @@ final class VectorQuantKernels {
 	 * correct thing (vectorized or scalar) regardless of this flag's value.
 	 */
 	static final boolean AVAILABLE = probe();
+
+	/**
+	 * True if {@link #AVAILABLE} and, in addition, the vectorized Q8_0
+	 * dequantization path ({@code Simd.dequantizeQ8_0Block}) produced correct
+	 * output against a known test pattern covering the full signed-byte
+	 * range. See the class javadoc for why this gets a separate, stronger
+	 * self-check than {@link #AVAILABLE}.
+	 */
+	static final boolean Q8_0_DEQUANT_AVAILABLE = probeQ8_0Dequant();
 
 	private VectorQuantKernels() {
 	}
@@ -83,6 +117,19 @@ final class VectorQuantKernels {
 			// exotic targets. Falls back to the scalar path below: same
 			// numerical result, just without the speedup.
 			log.log(Level.INFO, "jdk.incubator.vector unavailable, using scalar quantized-matmul kernels: "
+					+ t.getClass().getSimpleName() + (t.getMessage() != null ? ": " + t.getMessage() : ""));
+			return false;
+		}
+	}
+
+	private static boolean probeQ8_0Dequant() {
+		if (!AVAILABLE) {
+			return false;
+		}
+		try {
+			return Simd.probeDequantQ8_0();
+		} catch (Throwable t) {
+			log.log(Level.INFO, "SIMD Q8_0 dequantization unavailable, using scalar dequant: "
 					+ t.getClass().getSimpleName() + (t.getMessage() != null ? ": " + t.getMessage() : ""));
 			return false;
 		}
@@ -128,6 +175,61 @@ final class VectorQuantKernels {
 	}
 
 	/**
+	 * Vectorized Q8_0 dequantization: fills {@code dq[0..32)} with
+	 * {@code scale * raw[byteOffset+i]} for a 32-byte Q8_0 block.
+	 *
+	 * <p>
+	 * Returns {@code false} (writing nothing to {@code dq}) if the SIMD path
+	 * is not available or self-verified on this JVM. See
+	 * {@link #Q8_0_DEQUANT_AVAILABLE}. Callers must fall back to their own
+	 * scalar dequant loop when this returns {@code false}:
+	 *
+	 * <pre>{@code
+	 * if (!VectorQuantKernels.dequantizeQ8_0(raw, bo + 2, sc, dq)) {
+	 *     for (int i = 0; i < 32; i++) dq[i] = sc * raw[bo + 2 + i];
+	 * }
+	 * }</pre>
+	 */
+	static boolean dequantizeQ8_0(byte[] raw, int byteOffset, float scale, float[] dq) {
+		if (Q8_0_DEQUANT_AVAILABLE) {
+			try {
+				Simd.dequantizeQ8_0Block(raw, byteOffset, scale, dq);
+				return true;
+			} catch (Throwable t) {
+				// Should not happen once Q8_0_DEQUANT_AVAILABLE is true (the
+				// probe already exercised this exact code path), but never
+				// let a kernel crash a running request over an unexpected
+				// SIMD failure.
+				log.log(Level.WARNING, "Vector API Q8_0 dequantization failed after successful probe, "
+						+ "falling back to scalar for this call", t);
+			}
+		}
+		return false;
+	}
+
+	/**
+	 * One-line human-readable summary of the actual SIMD width in use, for a
+	 * single startup log line. Exists because "AVAILABLE=true" alone does not
+	 * say whether the JVM picked a narrow or wide vector shape on this CPU,
+	 * and that width materially affects how much speedup to expect. Safe to
+	 * call regardless of {@link #AVAILABLE}: never throws, isolates any
+	 * {@code jdk.incubator.vector} failure the same way {@link #dot} does.
+	 */
+	public static String diagnosticSummary() {
+		if (!AVAILABLE) {
+			return "SIMD unavailable: jdk.incubator.vector did not load "
+					+ "(missing --add-modules jdk.incubator.vector, or an unsupported target). "
+					+ "Quantized-matmul kernels are running the scalar fallback.";
+		}
+		try {
+			return Simd.diagnosticSummary();
+		} catch (Throwable t) {
+			return "SIMD available=true but reading the diagnostic failed: "
+					+ t.getClass().getSimpleName() + ". Kernels still run correctly via the scalar fallback.";
+		}
+	}
+
+	/**
 	 * All {@code jdk.incubator.vector} references are confined to this nested
 	 * class. It is only class-loaded the first time {@link #probe()} or
 	 * {@link #dot} reaches into it, so a JVM without the module installed (or
@@ -147,6 +249,18 @@ final class VectorQuantKernels {
 			jdk.incubator.vector.FloatVector v = jdk.incubator.vector.FloatVector.broadcast(SPECIES, 1f);
 			v = v.add(jdk.incubator.vector.FloatVector.broadcast(SPECIES, 2f));
 			return v.lane(0);
+		}
+
+		static String diagnosticSummary() {
+			int lanes = SPECIES.length();
+			int bits = SPECIES.vectorShape().vectorBitSize();
+			// 256-bit = AVX2 (8 float lanes), 512-bit = AVX-512 (16 lanes),
+			// 128-bit = SSE/NEON (4 lanes). On hybrid Intel P/E-core parts
+			// (e.g. Alder Lake and later), AVX-512 is fused off even though
+			// the P-cores support it in silicon, so 256-bit here is the
+			// expected/correct result on that class of CPU, not a fallback.
+			return "SIMD available: FloatVector.SPECIES_PREFERRED=" + bits + "-bit (" + lanes
+					+ " float lanes per instruction)";
 		}
 
 		static float dot(float[] dq, int dqOffset, float[] xp, int xOffset, int len) {
@@ -173,6 +287,71 @@ final class VectorQuantKernels {
 				sum += dq[dqOffset + i] * xp[xOffset + i];
 			}
 			return sum;
+		}
+
+		// Q8_0 dequantization.
+		// Fixed 8-lane species across byte/int/float rather than deriving
+		// from SPECIES_PREFERRED: 64-bit byte / 256-bit int / 256-bit float
+		// all have exactly 8 lanes, which keeps the widening conversion a
+		// clean 1:1 lane mapping (no fan-out across multiple source vectors)
+		// and evenly tiles a 32-element Q8_0 block in exactly 4 iterations
+		// with no remainder. Fixed-shape species are always usable per the
+		// Vector API spec even on hardware narrower than 256 bits (the JVM
+		// falls back to a correct, if not fully accelerated, implementation),
+		// so this does not need its own hardware-width fallback the way
+		// SPECIES_PREFERRED-based code would.
+		private static final jdk.incubator.vector.VectorSpecies<Byte> Q8_0_BYTE_SPECIES =
+				jdk.incubator.vector.ByteVector.SPECIES_64;
+		private static final jdk.incubator.vector.VectorSpecies<Integer> Q8_0_INT_SPECIES =
+				jdk.incubator.vector.IntVector.SPECIES_256;
+		private static final jdk.incubator.vector.VectorSpecies<Float> Q8_0_FLOAT_SPECIES =
+				jdk.incubator.vector.FloatVector.SPECIES_256;
+
+		static void dequantizeQ8_0Block(byte[] raw, int byteOffset, float scale, float[] dq) {
+			int lanes = Q8_0_BYTE_SPECIES.length(); // 8
+			for (int i = 0; i < 32; i += lanes) {
+				jdk.incubator.vector.ByteVector bv =
+						jdk.incubator.vector.ByteVector.fromArray(Q8_0_BYTE_SPECIES, raw, byteOffset + i);
+				// B2I: widening byte->int, sign-extends (matches Java's own
+				// byte->int promotion, which is what the scalar reference
+				// relies on for negative quantized values).
+				jdk.incubator.vector.IntVector iv = (jdk.incubator.vector.IntVector) bv
+						.convertShape(jdk.incubator.vector.VectorOperators.B2I, Q8_0_INT_SPECIES, 0);
+				// I2F: widening int->float, exact for the int8 range.
+				jdk.incubator.vector.FloatVector fv = (jdk.incubator.vector.FloatVector) iv
+						.convertShape(jdk.incubator.vector.VectorOperators.I2F, Q8_0_FLOAT_SPECIES, 0);
+				fv = fv.mul(scale);
+				fv.intoArray(dq, i);
+			}
+		}
+
+		/**
+		 * Dequantizes a known 32-byte pattern (covering both signed-byte
+		 * boundary values and a spread of ordinary ones) and checks every
+		 * output lane against the scalar-computed expected value. Only if
+		 * this passes does {@link VectorQuantKernels#dequantizeQ8_0} ever
+		 * dispatch to {@link #dequantizeQ8_0Block}.
+		 */
+		static boolean probeDequantQ8_0() {
+			byte[] testValues = { -128, -127, -100, -64, -33, -32, -31, -1, 0, 1, 31, 32, 33, 63, 64, 100, 126, 127,
+					-50, -25, -10, -5, 5, 10, 25, 50, 75, -75, -110, 110, -15, 15 };
+			if (testValues.length != 32) {
+				return false; // defensive; keeps the probe self-consistent if ever edited
+			}
+			byte[] raw = new byte[34];
+			System.arraycopy(testValues, 0, raw, 2, 32);
+			float scale = 0.037109375f; // arbitrary non-trivial scale (19/512); avoids masking bugs that scale=1 would hide
+
+			float[] dq = new float[32];
+			dequantizeQ8_0Block(raw, 2, scale, dq);
+
+			for (int i = 0; i < 32; i++) {
+				float expected = scale * testValues[i];
+				if (Math.abs(dq[i] - expected) > 1e-6f) {
+					return false;
+				}
+			}
+			return true;
 		}
 	}
 }
